--- a/currency-converter-app/src/app/app.component.html
+++ b/currency-converter-app/src/app/app.component.html
@@ -1,7 +1,8 @@
 <div class="toolbar-container">
   <mat-toolbar class="toolbar">
     <mat-icon aria-hidden="false" aria-label="check mark icon">euro_symbol</mat-icon>
-    <h1>Currensy Converter</h1>
+    <h1>Currency Converter</h1>
   </mat-toolbar>
 </div>
-<app-currensy-details></app-currensy-details>
+<app-currency-converter></app-currency-converter>
+<app-date></app-date>
