feat: add initial base

--- a/currency-converter-app/src/app/app.component.html
+++ b/currency-converter-app/src/app/app.component.html
@@ -4,4 +4,5 @@
     <h1>Currensy Converter</h1>
   </mat-toolbar>
 </div>
-<app-currensy-details></app-currensy-details>
+<app-currency-converter></app-currency-converter>
+<app-currency-date></app-currency-date>
