feat: ad  new style control

--- a/currency-converter-app/src/app/app.component.html
+++ b/currency-converter-app/src/app/app.component.html
@@ -4,5 +4,11 @@
     <h1>Currensy Converter</h1>
   </mat-toolbar>
 </div>
-<app-currency-converter></app-currency-converter>
-<app-currency-date></app-currency-date>
+<div class="converter-block">
+  <app-currency-converter></app-currency-converter>
+</div>
+<div class="date-block">
+  <app-currency-date></app-currency-date>
+</div>
+<mat-toolbar class="toolbar">
+</mat-toolbar>
