feat: add new form

--- a/currency-converter-app/src/app/components/currency-converter/currency-converter.component.html
+++ b/currency-converter-app/src/app/components/currency-converter/currency-converter.component.html
@@ -17,7 +17,7 @@
       </mat-card-content>
       <mat-form-field>
         <mat-label>Amount of Currency 1</mat-label>
-        <input matInput placeholder="Count" value="" type="number">
+        <input matInput placeholder="Count" value="2" type="number" [(ngModel)]="amountCur1">
       </mat-form-field>
     </mat-card>
   </div>
@@ -30,26 +30,28 @@
 <!--      <mat-icon>swap_horiz</mat-icon>-->
 <!--    </button>-->
   </div>
-<!--  <div class="cur-2">-->
-<!--    <mat-card>-->
-<!--      <mat-card-content>-->
-<!--        <mat-select [formControl]="currencyBox" placeholder="Currency"#singleSelect>-->
-<!--          <mat-option>-->
-<!--            <ngx-mat-select-search [formControl]="filterCurrency">-->
-<!--            </ngx-mat-select-search>-->
-<!--          </mat-option>-->
-<!--          <mat-option *ngFor="let value of filteredData1 | async" [value]="value.id">-->
-<!--            <img src="https://countryflagsapi.com/svg/{{value.flag}}" alt="Andorra flag" width="40" height="40"/>-->
-<!--            {{value.title }} - {{value.fullName}}-->
-<!--          </mat-option>-->
-<!--        </mat-select>-->
-<!--      </mat-card-content>-->
-<!--      <mat-form-field>-->
-<!--        <mat-label>Amount of Currency</mat-label>-->
-<!--        <input matInput placeholder="Count" value="" type="number">-->
-<!--      </mat-form-field>-->
-<!--    </mat-card>-->
-<!--  </div>-->
+  <div class="cur-2">
+    <mat-card>
+      <mat-card-content>
+        <mat-select [formControl]="currencyBox2"  [(ngModel)]="selectedCurrency2" (ngModelChange)="convertValue()"
+                    placeholder="Currency"
+                    #singleSelect2>
+          <mat-option>
+            <ngx-mat-select-search [formControl]="filterCurrency2">
+            </ngx-mat-select-search>
+          </mat-option>
+          <mat-option *ngFor="let value of filteredData2 | async" [value]="value.flagConvert">
+            <img src="https://countryflagsapi.com/svg/{{value.flag}}" alt="Andorra flag" width="40" height="40"/>
+            {{value.title }} - {{value.fullName}}
+          </mat-option>
+        </mat-select>
+      </mat-card-content>
+      <mat-form-field>
+        <mat-label>Amount of Currency 2</mat-label>
+        <input matInput placeholder="Count" value="" type="number">
+      </mat-form-field>
+    </mat-card>
+  </div>
 </div>
 <!--<div class="check-btn">-->
 <!--  <button mat-button>-->
