--- a/currency-converter-app/src/app/components/currency-converter/currency-converter.component.html
+++ b/currency-converter-app/src/app/components/currency-converter/currency-converter.component.html
@@ -1,25 +1,30 @@
 <div class="wrapper-card">
   <div class="cur-1">
-    <mat-card>
-      <mat-card-content>
-        <mat-select [formControl]="currencyBox1"  [(ngModel)]="selectedCurrency1" (ngModelChange)="convertValue()"
-                    placeholder="Currency"
-                    #singleSelect1>
-          <mat-option>
-            <ngx-mat-select-search [formControl]="filterCurrency1">
-            </ngx-mat-select-search>
-          </mat-option>
-          <mat-option *ngFor="let value of filteredData1 | async" [value]="value.flagConvert">
-            <img src="https://countryflagsapi.com/svg/{{value.flag}}" alt="Andorra flag" width="40" height="40"/>
-            {{value.title }} - {{value.fullName}}
-          </mat-option>
-        </mat-select>
-      </mat-card-content>
-      <mat-form-field>
-        <mat-label>Amount of Currency 1</mat-label>
-        <input matInput placeholder="Count" value="2" type="number" [(ngModel)]="amountCur1">
-      </mat-form-field>
-    </mat-card>
+    <form [formGroup]="formCurrency">
+      <mat-card style="border: 2px solid red">
+        <mat-card-content>
+            <mat-select
+                [formControl]="countryControl"
+                placeholder="Currency"
+                #singleSelect>
+<!--              formControlName="selectOption1"-->
+                <mat-option >
+                  <ngx-mat-select-search [formControl]="filterForCountryControl" >
+                  </ngx-mat-select-search>
+                </mat-option>
+                <mat-option *ngFor="let country of filteredCountries | async" [value]="country.flagConvert">
+                  <img src="https://countryflagsapi.com/svg/{{country.flag}}" alt="Andorra flag" width="40" height="40"/>
+                  {{country.title }} - {{country.fullName}}
+                </mat-option>
+            </mat-select>
+        </mat-card-content>
+        <mat-form-field>
+          <mat-label>Amount of Currency 1</mat-label>
+          <input matInput placeholder="Count" value="2" formControlName="amountCurrency"
+                 type="number">
+        </mat-form-field>
+      </mat-card>
+    </form>
   </div>
   <div class="btn-img">
     <button mat-button (click)="convertValue()">
@@ -31,26 +36,26 @@
 <!--    </button>-->
   </div>
   <div class="cur-2">
-    <mat-card>
-      <mat-card-content>
-        <mat-select [formControl]="currencyBox2"  [(ngModel)]="selectedCurrency2" (ngModelChange)="convertValue()"
-                    placeholder="Currency"
-                    #singleSelect2>
-          <mat-option>
-            <ngx-mat-select-search [formControl]="filterCurrency2">
-            </ngx-mat-select-search>
-          </mat-option>
-          <mat-option *ngFor="let value of filteredData2 | async" [value]="value.flagConvert">
-            <img src="https://countryflagsapi.com/svg/{{value.flag}}" alt="Andorra flag" width="40" height="40"/>
-            {{value.title }} - {{value.fullName}}
-          </mat-option>
-        </mat-select>
-      </mat-card-content>
-      <mat-form-field>
-        <mat-label>Amount of Currency 2</mat-label>
-        <input matInput placeholder="Count" value="" type="number">
-      </mat-form-field>
-    </mat-card>
+<!--    <mat-card>-->
+<!--      <mat-card-content>-->
+<!--        <mat-select [formControl]="currencyBox2"  [(ngModel)]="selectedCurrency2" (ngModelChange)="convertValue()"-->
+<!--                    placeholder="Currency"-->
+<!--                    #singleSelect2>-->
+<!--          <mat-option>-->
+<!--            <ngx-mat-select-search [formControl]="filterCurrency2">-->
+<!--            </ngx-mat-select-search>-->
+<!--          </mat-option>-->
+<!--          <mat-option *ngFor="let value of filteredData2 | async" [value]="value.flagConvert">-->
+<!--            <img src="https://countryflagsapi.com/svg/{{value.flag}}" alt="Andorra flag" width="40" height="40"/>-->
+<!--            {{value.title }} - {{value.fullName}}-->
+<!--          </mat-option>-->
+<!--        </mat-select>-->
+<!--      </mat-card-content>-->
+<!--      <mat-form-field>-->
+<!--        <mat-label>Amount of Currency 2</mat-label>-->
+<!--        <input matInput placeholder="Count" value="" type="number">-->
+<!--      </mat-form-field>-->
+<!--    </mat-card>-->
   </div>
 </div>
 <!--<div class="check-btn">-->
