--- a/currency-converter-app/src/app/components/currency-converter/currency-converter.component.scss
+++ b/currency-converter-app/src/app/components/currency-converter/currency-converter.component.scss
@@ -3,10 +3,10 @@
   align-items: center;
 
   .cur-1 {
-    width: 250px;
+    width: 350px;
   }
   .cur-2 {
-    width: 250px;
+    width: 350px;
   }
 }
 
@@ -15,4 +15,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.new-mat {
+  display: flex;
 }
