--- a/currency-converter-app/src/app/components/currency-converter/currency-converter.component.html
+++ b/currency-converter-app/src/app/components/currency-converter/currency-converter.component.html
@@ -1,11 +1,11 @@
 <div class="wrapper-card">
   <div class="cur-1">
-      <mat-card style="border: 2px solid red">
+      <mat-card style="border: 2px solid #a09a9a">
         <mat-card-content>
           <mat-select
                 #selectFlagOne
                 [formControl]="countryControl1"
-                placeholder="Currency">
+                placeholder="Currency 1">
               <mat-option>
                   <ngx-mat-select-search
                     [formControl]="filterForCountryControl1" >
@@ -19,7 +19,7 @@
             </mat-select>
         </mat-card-content>
         <mat-form-field>
-          <mat-label>Amount of Currency 1</mat-label>
+          <mat-label>Amount</mat-label>
           <input #currencyInputOne
                  (keyup)="convertValue($event)"
                  [formControl]="amountCurrency1"
@@ -29,21 +29,17 @@
       </mat-card>
   </div>
   <div class="btn-img">
-    <button mat-button (click)="check()">
-      <mat-icon>perm_scan_wifi</mat-icon>
-      Convert
+    <button mat-button>
+      <mat-icon>swap_horiz</mat-icon>
     </button>
-<!--    <button mat-button>-->
-<!--      <mat-icon>swap_horiz</mat-icon>-->
-<!--    </button>-->
   </div>
   <div class="cur-2">
-    <mat-card style="border: 2px solid red">
+    <mat-card style="border: 2px solid #a09a9a">
       <mat-card-content>
         <mat-select
           #selectFlagTwo
           [formControl]="countryControl2"
-          placeholder="Currency"
+          placeholder="Currency 2"
           >
           <mat-option >
             <ngx-mat-select-search [formControl]="filterForCountryControl2" >
@@ -56,7 +52,7 @@
         </mat-select>
       </mat-card-content>
       <mat-form-field>
-        <mat-label>Amount of Currency 1</mat-label>
+        <mat-label>Amount</mat-label>
         <input #currencyInputTwo
                 (keyup)="convertValue($event)"
                [formControl]="amountCurrency2"
