--- a/currency-converter-app/src/app/components/currency-date/currency-date.component.html
+++ b/currency-converter-app/src/app/components/currency-date/currency-date.component.html
@@ -1,5 +1,18 @@
-<mat-form-field>
-  <input matInput [matDatepicker]="picker" [placeholder]="currentDate">
+<mat-form-field class="date-form">
+  <input matInput
+         [max]="currentDate"
+         [matDatepicker]="picker"
+         (dateChange)="changeDate($event)"
+         [placeholder]="currentDate">
   <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
   <mat-datepicker #picker startView="month" [startAt]="startDate"></mat-datepicker>
 </mat-form-field>
+
+
+<!--
+<input matInput [matDatepicker]="picker"
+         placeholder="Input & change events"
+         (dateInput)="addEvent('input', $event)"
+         (dateChange)="addEvent('change', $event)">
+  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+  <mat-datepicker #picker></mat-datepicker>-->
