--- a/currency-converter-app/src/app/components/currency-converter/currency-converter.component.scss
+++ b/currency-converter-app/src/app/components/currency-converter/currency-converter.component.scss
@@ -1,5 +1,6 @@
 .wrapper-card {
   display: flex;
+  flex-direction: row;
   align-items: center;
 
   .cur-1 {
@@ -8,6 +9,10 @@
   .cur-2 {
     width: 350px;
   }
+}
+
+.wrapper-card.reverse {
+  flex-direction: row-reverse;
 }
 
 .check-btn {
