--- a/currency-converter-app/src/app/components/currency-converter/currency-converter.component.html
+++ b/currency-converter-app/src/app/components/currency-converter/currency-converter.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper-card">
+<div class="wrapper-card" [ngClass]="{'reverse': isReverse}">
   <div class="cur-1">
       <mat-card style="border: 2px solid #a09a9a">
         <mat-card-content>
@@ -29,7 +29,7 @@
       </mat-card>
   </div>
   <div class="btn-img">
-    <button mat-button>
+    <button mat-button (click)="isReverse = !isReverse">
       <mat-icon>swap_horiz</mat-icon>
     </button>
   </div>
