--- a/currency-converter-app/src/app/components/currency-converter/currency-converter.component.html
+++ b/currency-converter-app/src/app/components/currency-converter/currency-converter.component.html
@@ -1,4 +1,5 @@
-<div class="wrapper-card" [ngClass]="{'reverse': isReverse}">
+<div class="wrapper-card"
+     [ngClass]="{'reverse': isReverse}">
   <div class="cur-1">
       <mat-card style="border: 2px solid #a09a9a">
         <mat-card-content>
@@ -21,7 +22,6 @@
         <mat-form-field>
           <mat-label>Amount</mat-label>
           <input #currencyInputOne
-                 (keyup)="convertValue($event)"
                  [formControl]="amountCurrency1"
                  matInput placeholder="Count" value=""
                  type="number">
@@ -29,7 +29,8 @@
       </mat-card>
   </div>
   <div class="btn-img">
-    <button mat-button (click)="isReverse = !isReverse">
+    <button mat-button
+            (click)="isReverse = !isReverse">
       <mat-icon>swap_horiz</mat-icon>
     </button>
   </div>
@@ -54,7 +55,6 @@
       <mat-form-field>
         <mat-label>Amount</mat-label>
         <input #currencyInputTwo
-                (keyup)="convertValue($event)"
                [formControl]="amountCurrency2"
                matInput placeholder="Count" value=""
                type="number">
